--- a/Bootcamps/OrangeTech_Inter/primeirospassosreact/package.json
+++ b/Bootcamps/OrangeTech_Inter/primeirospassosreact/package.json
@@ -48,6 +48,7 @@
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@types/styled-components": "^5.1.26",
     "typescript": "^4.8.4"
   }
 }
